--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node dist/index.js"
+   "start": "node ./dist/index.js"
+
   },
   "dependencies": {
     "cors": "^2.8.5",
