--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "types": ["node", "express", "cors"],
+    "moduleResolution": "node",
     "resolveJsonModule": true
   },
   "include": ["src"]
